--- a/Hippo/UIView/TableViewCell/FilterOptionCell/FilterOptionTableViewCell.xib
+++ b/Hippo/UIView/TableViewCell/FilterOptionCell/FilterOptionTableViewCell.xib
@@ -1,37 +1,37 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" id="KGk-i7-Jjw" customClass="FilterOptionTableViewCell" customModule="Hippo" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" id="GAC-al-p1M" customClass="FilterOptionTableViewCell" customModule="Hippo" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="GAC-al-p1M" id="Rue-re-mIe">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PMk-qo-8uk">
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bQU-kn-yao">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6R8-h4-4gD">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7av-db-JYx">
                                 <rect key="frame" x="0.0" y="0.0" width="5" height="44"/>
                                 <color key="backgroundColor" red="0.1333333333" green="0.58823529409999997" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="5" id="bB5-zv-GMJ"/>
+                                    <constraint firstAttribute="width" constant="5" id="Y5p-Hq-i8R"/>
                                 </constraints>
                             </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FnX-KB-Rya">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xIT-D3-u6y">
                                 <rect key="frame" x="15" y="0.0" width="305" height="44"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="number" keyPath="RegularFontSizee">
@@ -41,28 +41,28 @@
                             </label>
                         </subviews>
                         <constraints>
-                            <constraint firstItem="FnX-KB-Rya" firstAttribute="top" secondItem="PMk-qo-8uk" secondAttribute="top" id="CLd-KK-QWC"/>
-                            <constraint firstAttribute="bottom" secondItem="FnX-KB-Rya" secondAttribute="bottom" id="Tar-kF-A85"/>
-                            <constraint firstAttribute="trailing" secondItem="FnX-KB-Rya" secondAttribute="trailing" id="WgT-Pb-54i"/>
-                            <constraint firstItem="6R8-h4-4gD" firstAttribute="leading" secondItem="PMk-qo-8uk" secondAttribute="leading" id="dL5-A8-fgw"/>
-                            <constraint firstItem="FnX-KB-Rya" firstAttribute="leading" secondItem="6R8-h4-4gD" secondAttribute="trailing" constant="10" id="vwo-Kp-sCB"/>
-                            <constraint firstItem="6R8-h4-4gD" firstAttribute="top" secondItem="PMk-qo-8uk" secondAttribute="top" id="wcz-nO-RBo"/>
-                            <constraint firstAttribute="bottom" secondItem="6R8-h4-4gD" secondAttribute="bottom" id="xdm-IG-zLj"/>
+                            <constraint firstItem="7av-db-JYx" firstAttribute="top" secondItem="bQU-kn-yao" secondAttribute="top" id="DpS-44-nvb"/>
+                            <constraint firstAttribute="trailing" secondItem="xIT-D3-u6y" secondAttribute="trailing" id="E12-eu-LQS"/>
+                            <constraint firstItem="xIT-D3-u6y" firstAttribute="leading" secondItem="7av-db-JYx" secondAttribute="trailing" constant="10" id="YJa-MO-7cp"/>
+                            <constraint firstItem="7av-db-JYx" firstAttribute="leading" secondItem="bQU-kn-yao" secondAttribute="leading" id="cye-yz-VZ9"/>
+                            <constraint firstAttribute="bottom" secondItem="7av-db-JYx" secondAttribute="bottom" id="gvd-Sq-46j"/>
+                            <constraint firstAttribute="bottom" secondItem="xIT-D3-u6y" secondAttribute="bottom" id="mqK-st-NXv"/>
+                            <constraint firstItem="xIT-D3-u6y" firstAttribute="top" secondItem="bQU-kn-yao" secondAttribute="top" id="s64-U8-9rf"/>
                         </constraints>
                     </view>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="PMk-qo-8uk" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="DTo-14-URT"/>
-                    <constraint firstItem="PMk-qo-8uk" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="O0C-AS-7ES"/>
-                    <constraint firstAttribute="bottom" secondItem="PMk-qo-8uk" secondAttribute="bottom" id="k6O-5A-VMs"/>
-                    <constraint firstAttribute="trailing" secondItem="PMk-qo-8uk" secondAttribute="trailing" id="kfF-gF-8JK"/>
+                    <constraint firstItem="bQU-kn-yao" firstAttribute="leading" secondItem="Rue-re-mIe" secondAttribute="leading" id="7Kv-P2-UJz"/>
+                    <constraint firstItem="bQU-kn-yao" firstAttribute="top" secondItem="Rue-re-mIe" secondAttribute="top" id="IBo-8K-m0o"/>
+                    <constraint firstAttribute="bottom" secondItem="bQU-kn-yao" secondAttribute="bottom" id="oOm-Lg-n8l"/>
+                    <constraint firstAttribute="trailing" secondItem="bQU-kn-yao" secondAttribute="trailing" id="rae-Bg-5fF"/>
                 </constraints>
             </tableViewCellContentView>
-            <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <viewLayoutGuide key="safeArea" id="ReL-bg-NcP"/>
             <connections>
-                <outlet property="cellBackgroundView" destination="PMk-qo-8uk" id="UW6-MS-aec"/>
-                <outlet property="cellLabel" destination="FnX-KB-Rya" id="Wts-B9-ebL"/>
-                <outlet property="verticleLineView" destination="6R8-h4-4gD" id="Jtp-q5-8XB"/>
+                <outlet property="cellBackgroundView" destination="bQU-kn-yao" id="Ufv-Sd-eab"/>
+                <outlet property="cellLabel" destination="xIT-D3-u6y" id="iYa-S1-kzE"/>
+                <outlet property="verticleLineView" destination="7av-db-JYx" id="DmO-7F-aHl"/>
             </connections>
             <point key="canvasLocation" x="66" y="153"/>
         </tableViewCell>
