--- a/Hippo/UIView/CustomViews/ChatInfoHeader/ChatInfoHeader.xib
+++ b/Hippo/UIView/CustomViews/ChatInfoHeader/ChatInfoHeader.xib
@@ -1,70 +1,70 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="ChatInfoHeader" customModule="Hippo" customModuleProvider="target">
+        <view contentMode="scaleToFill" id="GaC-LB-1Gb" customClass="ChatInfoHeader" customModule="Hippo" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="572" height="94"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PLn-5i-j1T" customClass="So_UIView" customModule="Hippo" customModuleProvider="target">
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7yh-HS-026" customClass="So_UIView" customModule="Hippo" customModuleProvider="target">
                     <rect key="frame" x="0.0" y="0.0" width="572" height="94"/>
                     <subviews>
-                        <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="d2g-Q6-WAN" customClass="So_UIImageView" customModule="Hippo" customModuleProvider="target">
+                        <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="XXe-Ys-oXN" customClass="So_UIImageView" customModule="Hippo" customModuleProvider="target">
                             <rect key="frame" x="16" y="37" width="20" height="20"/>
                             <constraints>
-                                <constraint firstAttribute="width" constant="20" id="BKT-tU-0kl"/>
-                                <constraint firstAttribute="width" secondItem="d2g-Q6-WAN" secondAttribute="height" multiplier="1:1" id="gzG-uN-nkA"/>
+                                <constraint firstAttribute="width" constant="20" id="C0b-5h-Zku"/>
+                                <constraint firstAttribute="width" secondItem="XXe-Ys-oXN" secondAttribute="height" multiplier="1:1" id="nYN-V6-E2e"/>
                             </constraints>
                         </imageView>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KZX-rj-3TS" customClass="So_CustomLabel" customModule="Hippo" customModuleProvider="target">
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1We-gb-SpY" customClass="So_CustomLabel" customModule="Hippo" customModuleProvider="target">
                             <rect key="frame" x="44" y="38" width="520" height="18"/>
                             <fontDescription key="fontDescription" type="system" weight="medium" pointSize="15"/>
-                            <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hzG-3H-nTu" customClass="So_UIView" customModule="Hippo" customModuleProvider="target">
+                        <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DZf-kF-gk6" customClass="So_UIView" customModule="Hippo" customModuleProvider="target">
                             <rect key="frame" x="0.0" y="93" width="572" height="1"/>
                             <color key="backgroundColor" red="0.91764705879999997" green="0.91764705879999997" blue="0.91764705879999997" alpha="1" colorSpace="calibratedRGB"/>
                             <constraints>
-                                <constraint firstAttribute="height" constant="1" id="2Np-JR-wNw"/>
+                                <constraint firstAttribute="height" constant="1" id="c4G-Sl-AUs"/>
                             </constraints>
                         </view>
                     </subviews>
-                    <color key="backgroundColor" red="0.92156862745098034" green="0.92549019607843142" blue="0.94901960784313721" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <color key="backgroundColor" red="0.92156862750000001" green="0.92549019610000005" blue="0.94901960780000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
-                        <constraint firstAttribute="bottom" secondItem="hzG-3H-nTu" secondAttribute="bottom" id="F7U-95-6D3"/>
-                        <constraint firstAttribute="trailing" secondItem="hzG-3H-nTu" secondAttribute="trailing" id="LZO-Oz-VJi"/>
-                        <constraint firstItem="KZX-rj-3TS" firstAttribute="centerY" secondItem="PLn-5i-j1T" secondAttribute="centerY" id="OGc-PP-xeW"/>
-                        <constraint firstItem="hzG-3H-nTu" firstAttribute="leading" secondItem="PLn-5i-j1T" secondAttribute="leading" id="V6A-l4-vZV"/>
-                        <constraint firstAttribute="trailing" secondItem="KZX-rj-3TS" secondAttribute="trailing" constant="8" id="mV9-pc-l5z"/>
-                        <constraint firstItem="KZX-rj-3TS" firstAttribute="leading" secondItem="d2g-Q6-WAN" secondAttribute="trailing" constant="8" id="w6h-ja-9eV"/>
-                        <constraint firstItem="d2g-Q6-WAN" firstAttribute="leading" secondItem="PLn-5i-j1T" secondAttribute="leading" constant="16" id="z8C-40-3j5"/>
-                        <constraint firstItem="d2g-Q6-WAN" firstAttribute="centerY" secondItem="PLn-5i-j1T" secondAttribute="centerY" id="zWa-O1-Act"/>
+                        <constraint firstItem="1We-gb-SpY" firstAttribute="centerY" secondItem="7yh-HS-026" secondAttribute="centerY" id="9mk-Mm-EdQ"/>
+                        <constraint firstItem="XXe-Ys-oXN" firstAttribute="leading" secondItem="7yh-HS-026" secondAttribute="leading" constant="16" id="FV4-in-VTD"/>
+                        <constraint firstItem="DZf-kF-gk6" firstAttribute="leading" secondItem="7yh-HS-026" secondAttribute="leading" id="IKx-ab-Ad7"/>
+                        <constraint firstAttribute="trailing" secondItem="DZf-kF-gk6" secondAttribute="trailing" id="Mbr-CA-VV1"/>
+                        <constraint firstAttribute="trailing" secondItem="1We-gb-SpY" secondAttribute="trailing" constant="8" id="U7Z-8b-YD5"/>
+                        <constraint firstItem="XXe-Ys-oXN" firstAttribute="centerY" secondItem="7yh-HS-026" secondAttribute="centerY" id="an2-8q-y9i"/>
+                        <constraint firstItem="1We-gb-SpY" firstAttribute="leading" secondItem="XXe-Ys-oXN" secondAttribute="trailing" constant="8" id="vL5-e4-gsd"/>
+                        <constraint firstAttribute="bottom" secondItem="DZf-kF-gk6" secondAttribute="bottom" id="wX0-lJ-lhh"/>
                     </constraints>
                 </view>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="PLn-5i-j1T" secondAttribute="trailing" id="EdU-LN-7Xu"/>
-                <constraint firstAttribute="bottom" secondItem="PLn-5i-j1T" secondAttribute="bottom" id="V7f-1q-HXI"/>
-                <constraint firstItem="PLn-5i-j1T" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="guw-vk-Dtk"/>
-                <constraint firstItem="PLn-5i-j1T" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="i8F-cE-kkr"/>
+                <constraint firstAttribute="bottom" secondItem="7yh-HS-026" secondAttribute="bottom" id="59k-iO-9O0"/>
+                <constraint firstItem="7yh-HS-026" firstAttribute="leading" secondItem="GaC-LB-1Gb" secondAttribute="leading" id="PzZ-YB-pLt"/>
+                <constraint firstItem="7yh-HS-026" firstAttribute="top" secondItem="GaC-LB-1Gb" secondAttribute="top" id="WCZ-7c-Clb"/>
+                <constraint firstAttribute="trailing" secondItem="7yh-HS-026" secondAttribute="trailing" id="vmq-7d-pa2"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
-                <outlet property="constraintTextLabelLeading" destination="w6h-ja-9eV" id="aRl-e7-eVy"/>
-                <outlet property="horizontalLineView" destination="hzG-3H-nTu" id="SLx-u8-A41"/>
-                <outlet property="iconImageView" destination="d2g-Q6-WAN" id="HNJ-yn-q7g"/>
-                <outlet property="mainContentView" destination="PLn-5i-j1T" id="iMX-Ok-FIc"/>
-                <outlet property="textLabel" destination="KZX-rj-3TS" id="0kZ-Zt-zL6"/>
-                <outlet property="widthOfImageView" destination="BKT-tU-0kl" id="5os-iI-Aya"/>
+                <outlet property="constraintTextLabelLeading" destination="vL5-e4-gsd" id="QGa-2z-KRX"/>
+                <outlet property="horizontalLineView" destination="DZf-kF-gk6" id="GzV-g9-6ed"/>
+                <outlet property="iconImageView" destination="XXe-Ys-oXN" id="Z8i-PM-aJc"/>
+                <outlet property="mainContentView" destination="7yh-HS-026" id="ZYB-lf-Oac"/>
+                <outlet property="textLabel" destination="1We-gb-SpY" id="lGQ-7q-mIv"/>
+                <outlet property="widthOfImageView" destination="C0b-5h-Zku" id="XAs-FM-eFd"/>
             </connections>
             <point key="canvasLocation" x="132" y="-232"/>
         </view>
